nodejs_mariadb/adt-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: eks-tutorial-ingress
  #namespace: eks-tutorial
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    #alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/target-type: instance
spec:
  # host: adt.example.com
  # tls:
  #   secret: adt-secret
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: users-service
              servicePort: 80
          - path: /health
            backend:
              serviceName: users-service
              servicePort: 80
          - path: /users
            backend:
              serviceName: users-service
              servicePort: 80
